welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if (sleepln(false, true) = true) {
		return true
	} else {
		return false
	}
}

